--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "weatherapp",
   "version": "1.0.0",
-  "description": "a weather app with express and node",
+  "description": "A weather app by thapa",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/Nilesh-chaudhary/weatherApp/issues"
   },
-  "homepage": "https://github.com/Nilesh-chaudhary/weatherApp#readme"
+  "homepage": "https://github.com/Nilesh-chaudhary/weatherApp#readme",
+  "dependencies": {
+    "express": "^4.18.1"
+  }
 }
